# preml

./: .gitignore  CHANGELOG.md  README.md  Usage Guide.md  knowledge.db  pyproject.toml  report.html  requirements.txt  setup.cfg
artifacts/usage_guide_validation/: usage_guide_validation.json  usage_guide_validation.md
artifacts/usage_guide_validation/_base_venv/: pyvenv.cfg
artifacts/usage_guide_validation/_base_venv/Scripts/: activate  activate.bat
docs/: index.rst  recommendation_engine.rst
ml_toolkit/: config.py  eda.py  exceptions.py  feature_engineering.py  model_utils.py  preprocessing.py  recommendation_engine.py  report.py  statistics_engine.py  visualization.py
preml/: __init__.py  config.py  eda.py  exceptions.py  facade.py  feature_engineering.py  model_utils.py  preprocessing.py  recommendation_engine.py  recommendation_utils.py  report.py  schema.py  statistics_engine.py  visualization.py
scripts/: validate_usage_guide_examples.py
tests/: README_usage_guide.md  test_eda.py  test_facade_api.py  test_preprocessing.py  test_recommendation_engine_new.py  test_recommendations.py  test_statistics.py  test_usage_guide_execution.py  test_validate_usage_guide.py
