[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypreml"
version = "0.1.4"
description = "Production-ready machine learning toolkit for EDA, preprocessing, and modelling."
readme = "Usage Guide.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Ali Nazer", email = "alinazer30@gmail.com"}
]
keywords = [
    "machine learning",
    "eda",
    "preprocessing",
    "feature engineering",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.23.0,<3.0.0",
    "scipy>=1.9.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "scikit-learn>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/pqun7/preml"
Repository = "https://github.com/pqun7/preml"
Issues = "https://github.com/pqun7/preml/issues"

[tool.setuptools.packages.find]
include = ["preml*"]